Update -> Remove tag

--- a/data/project_data.json
+++ b/data/project_data.json
@@ -12,7 +12,7 @@
         {
         "title": "OUROFINO | BRQ",
         "description": "Desenvolvimento e manutenção de aplicações LWC sob Salesforce Platform Cloud. Implementação de Processamento em Lote e integrações REST/SOAP com Apex e SOQL.",
-        "tags": ["APEX", "LWC", "VISUALFORCE", "FULL-STACK"]
+        "tags": ["APEX", "LWC", "FULL-STACK"]
     },
     {
         "title": "CATHO | BRQ",
